# llvm-project

clang-build/: log
llvm/lib/Support/: CMakeLists.txt  DynamicAPInt.cpp  SlowDynamicAPInt.cpp
llvm/unittests/ADT/: DynamicAPIntTest.cpp
mlir/: CMakeLists.txt
mlir/benchmarks/: mpint.bench.cpp
mlir/include/mlir/: InitAllDialects.h  Parser.h  PresburgerParser.h
mlir/lib/: CMakeLists.txt
mlir/lib/Analysis/: AffineAnalysis.cpp  AffineStructures.cpp  CMakeLists.txt  PWAFunction.cpp  ParamLexSimplex.cpp  PresburgerSet.cpp  Simplex.cpp
mlir/lib/Analysis/Presburger/: APInt2.cpp  CMakeLists.txt  Coalesce.cpp  DynamicAPInt.cpp  ISLPrinter.cpp  IntegerPolyhedron.cpp  IntegerRelation.cpp  LinearTransform.cpp  MPAPInt.cpp  MPInt.cpp  Matrix.cpp  PWMAFunction.cpp  ParamLexSimplex.cpp  Parser.cpp  PresburgerBasicMap.cpp  PresburgerBasicSet.cpp  PresburgerRelation.cpp  PresburgerSet.cpp  Printer.cpp  Set.cpp  Simplex.cpp  Utils.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/IR/: MLIRContext.cpp
mlir/lib/Parser/: AffineParser.cpp  CMakeLists.txt  DialectSymbolParser.cpp  Lexer.cpp  Parser.cpp  Parser.h  PresburgerParser.cpp  TokenKinds.def
mlir/lib/Transforms/: LoopFusion.cpp
mlir/tools/: CMakeLists.txt
mlir/tools/mlir-opt/: CMakeLists.txt  mlir-opt.cpp
mlir/unittests/Analysis/Presburger/: CMakeLists.txt  CoalesceTest.cpp  IntegerPolyhedronTest.cpp  MPIntTest.cpp  MatrixTest.cpp  PWMAFunctionTest.cpp  ParamLexSimplexTest.cpp  ParserTest.cpp  PresburgerBasicMapTest.cpp  PresburgerMapTest.cpp  PresburgerSetTest.cpp  SetTest.cpp  SimplexTest.cpp  Utils.h
(+4094 files in other folders)
